test/kubernetes/e2e/features/backends/testdata/backend-error.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    port: 8080
    protocol: HTTP
    hostname: www.example.com
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: default
spec:
  parentRefs:
  - name: example-gateway
    namespace: default
  hostnames:
  - "www.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ai
    backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: example-ai-backend
---
apiVersion: v1
kind: Secret
metadata:
  name: openai-secret
  namespace: default
type: Opaque
data:
  # for openai it should be Authorization, token will give error when processing
  token: c2stdGVzdC1zZWNyZXQK # Base64 encoded "sk-test-secret"
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: example-ai-backend
  namespace: default
spec:
  type: AI
  ai:
    llm:
      openai:
        model: "gpt-4"
        authToken:
          kind: "SecretRef"
          secretRef:
            name: openai-secret
